src/objects/IT_Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Call__c</fullName>
        <label>Date of Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>IT Call Logs</relationshipLabel>
        <relationshipName>IT_Call_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarterly_Call_Detail__c</fullName>
        <label>Quarterly Call Detail</label>
        <type>TextArea</type>
    </fields>
    <label>IT Call Log</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>IT Call Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>